디렉토리 변경, CI 마크업 변경

--- a/codinglist.html
+++ b/codinglist.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>프론트 ::: 코딩 리스트</title>
-	<link type="text/css" rel="stylesheet" href="resource/css/common.css"/>
+	<link type="text/css" rel="stylesheet" href="pub/resource/css/common.css"/>
 	<link type="text/css" rel="stylesheet" href="codinglist.css"/>
-	<script src="resource/js/libs/jquery-1.12.4.min.js"></script>
+	<script src="pub/resource/js/libs/jquery-1.12.4.min.js"></script>
 	<script src="codinglist.js"></script>
 </head>
 <body id="guide">
@@ -89,7 +89,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > about wadiz </td>
-				<td><a href="/resource/html/about.html">about.html</a></td>
+				<td><a href="/pub/resource/html/about.html">about.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td>
@@ -100,7 +100,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > why wadiz</td>
-				<td><a href="/resource/html/why.html">why.html</a></td>
+				<td><a href="/pub/resource/html/why.html">why.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td></td>
@@ -114,7 +114,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > 와디즈인 인터뷰 > 목록</td>
-				<td><a href="/resource/html/interview_list.html">interview_list.html</a></td>
+				<td><a href="/pub/resource/html/interview_list.html">interview_list.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td>인터뷰, 라이프, 미디어 공통 템플릿</td>
@@ -122,7 +122,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > 와디즈인 인터뷰 > 상세</td>
-				<td><a href="/resource/html/interview_detail.html">interview_detail.html</a></td>
+				<td><a href="/pub/resource/html/interview_detail.html">interview_detail.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td>인터뷰, 라이프, 미디어 공통 템플릿</td>
@@ -136,7 +136,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > 지원하기 > 채용절차</td>
-				<td><a href="/resource/html/recruit_step.html">recruit_step.html</a></td>
+				<td><a href="/pub/resource/html/recruit_step.html">recruit_step.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td></td>
@@ -144,7 +144,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > 지원하기 > 채용공고</td>
-				<td><a href="/resource/html/recruit_notification.html">recruit_notification.html</a></td>
+				<td><a href="/pub/resource/html/recruit_notification.html">recruit_notification.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td></td>
@@ -152,7 +152,7 @@
 			</tr>
 			<tr>
 				<td>wadiz > 지원하기 > 문의하기</td>
-				<td><a href="/resource/html/recruit_inquiry.html">recruit_inquiry.html</a></td>
+				<td><a href="/pub/resource/html/recruit_inquiry.html">recruit_inquiry.html</a></td>
 				<td></td>
 				<td>2020-04-02</td>
 				<td></td>
