--- a/pub/resource/html/about.html
+++ b/pub/resource/html/about.html
@@ -7,14 +7,14 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
 <header id="header">
 	<div class="header-section">
-		<h1 class="recruit-log sp_wadiz"><span class="a11y">와디즈 채용</span></h1>
+		<h1 class="recruit-log sp_wadiz"><a href="#;"><span class="a11y">와디즈 채용</span></a></h1>
 		<div id="desktopMenu">
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
@@ -376,8 +376,8 @@
 <!-- E : layer-popup 개인정보취급방침 -->
 
 
-<script src="/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/resource/js/wadiz.js"></script>
+<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/pub/resource/js/wadiz.js"></script>
 
 
 </body>
