--- a/pub/resource/html/interview_detail.html
+++ b/pub/resource/html/interview_detail.html
@@ -7,14 +7,14 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
 <header id="header">
 	<div class="header-section">
-		<h1 class="recruit-log sp_wadiz"><span class="a11y">와디즈 채용</span></h1>
+		<h1 class="recruit-log sp_wadiz"><a href="#;"><span class="a11y">와디즈 채용</span></a></h1>
 		<div id="desktopMenu">
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
@@ -124,7 +124,7 @@
 				<span class="detail-date">2019.10.25</span>
 				<div class="detail-content">
 					<!-- [D] 에디터 영역으로 임시 스타일링 적용 -->
-					<p><img src="/resource/images/temp/temp_detail_01.jpg" alt=""></p>
+					<p><img src="/pub/resource/images/temp/temp_detail_01.jpg" alt=""></p>
 					<p style="font-size: 16px;font-weight: 500;margin:40px 0;color: #333;">우와~ 진짜 짱이다! 천재야 천재!</p>
 					<p style="color: #333;">
 						각종 환호와 칭찬이 때와 장소를 가리지 않고 난무합니다. 어디서 나는 소리인고 하니 시선은 다름 없이 이 팀이 있는 곳으로 향합니다.
@@ -143,7 +143,7 @@
 			<div id="latest-list" class="owl-carousel">
 				<div class="item">
 					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.01</span>
@@ -152,7 +152,7 @@
 				</div>
 				<div class="item">
 					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.02</span>
@@ -161,7 +161,7 @@
 				</div>
 				<div class="item">
 					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.03</span>
@@ -170,7 +170,7 @@
 				</div>
 				<div class="item">
 					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.04</span>
@@ -179,7 +179,7 @@
 				</div>
 				<div class="item">
 					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -188,7 +188,7 @@
 				</div>
 				<div class="item">
 					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.06</span>
@@ -221,9 +221,9 @@
 </footer>
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
-<script src="/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/resource/js/libs/owl.carousel.js"></script>
-<script src="/resource/js/wadiz.js"></script>
+<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/pub/resource/js/libs/owl.carousel.js"></script>
+<script src="/pub/resource/js/wadiz.js"></script>
 
 </body>
 </html>
