--- a/pub/resource/html/interview_list.html
+++ b/pub/resource/html/interview_list.html
@@ -7,14 +7,14 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
 <header id="header">
 	<div class="header-section">
-		<h1 class="recruit-log sp_wadiz"><span class="a11y">와디즈 채용</span></h1>
+		<h1 class="recruit-log sp_wadiz"><a href="#;"><span class="a11y">와디즈 채용</span></a></h1>
 		<div id="desktopMenu">
 			<div class="main-menu-wrap">
 				<ul class="main-menu-list">
@@ -122,7 +122,7 @@
 			<ul class="inside-list">
 				<li class="inside-item">
 					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -131,7 +131,7 @@
 				</li>
 				<li class="inside-item">
 					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -140,7 +140,7 @@
 				</li>
 				<li class="inside-item">
 					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -149,7 +149,7 @@
 				</li>
 				<li class="inside-item">
 					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -158,7 +158,7 @@
 				</li>
 				<li class="inside-item">
 					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -167,7 +167,7 @@
 				</li>
 				<li class="inside-item">
 					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
@@ -205,8 +205,8 @@
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
 
-<script src="/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/resource/js/wadiz.js"></script>
+<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/pub/resource/js/wadiz.js"></script>
 <script>
 
 
