메인, 민트컬러 통일, Noto Sans 기타 수정사항

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 <div class="fb-menu-box">
 	<ul id="fp-menu">
 		<li class="fp-menu-item" data-menuanchor="anchor1">
-			<a href="#anchor1">About 와디즈 <span></span></a>
+			<a href="#anchor1"><em class="fp-menu-txt">About 와디즈</em> <span></span></a>
 		</li>
 		<li class="fp-menu-item" data-menuanchor="anchor2">
-			<a href="#anchor2">와디즈인 인터뷰 <span></span></a>
+			<a href="#anchor2"><em class="fp-menu-txt">와디즈인 인터뷰</em> <span></span></a>
 		</li>
 		<li class="fp-menu-item" data-menuanchor="anchor3">
-			<a href="#anchor3">와디즈 라이프 <span></span></a>
+			<a href="#anchor3"><em class="fp-menu-txt">와디즈 라이프</em> <span></span></a>
 		</li>
 	</ul>
 </div>
