--- a/pub/resource/html/why.html
+++ b/pub/resource/html/why.html
@@ -204,9 +204,9 @@
 				<span class="welfare-title">보상</span>
 				<dl class="welfare-data">
 					<dt class="welfare-subtitle">와디즈가 성장하는 만큼 <br class="line-v2">와디즈인도 성장합니다.</dt>
-					<dd class="welfare-desc">정당한 보상 체계</dd>
+					<dd class="welfare-desc">5원칙과 성과에 기반한 보상체계</dd>
 					<dd class="welfare-desc">업무 성장에 필요한 자기계발 지원 제도 (외부 교육 수강 지원 등)</dd>
-					<dd class="welfare-desc">원하는 도서 구입비 무제한 지원</dd>
+					<dd class="welfare-desc">역량 향상을 위한 도서 구입 무한 지원</dd>
 					<dd class="welfare-desc">​동료와 함께 하는 다양한 동호회비 지원 (금융, 영어, 보드게임 등)</dd>
 				</dl>
 			</li>
