스피너 추가

--- a/codinglist.html
+++ b/codinglist.html
@@ -159,7 +159,19 @@
 				<td><span class="state"><span class="complete"></span></span></td>
 			</tr>
 
-
+			<tr class="linetitle">
+				<td>
+					<div class="sub-tit">기타</div>
+				</td>
+			</tr>
+			<tr>
+				<td>스피너</td>
+				<td><a href="/pub/resource/html/spinor.html">spinor.html</a></td>
+				<td></td>
+				<td>2020-04-09</td>
+				<td></td>
+				<td><span class="state"><span class="complete"></span></span></td>
+			</tr>
 
 
 
@@ -179,6 +191,8 @@
 				<td><span class="state"><span class="undecided"></span></span></td>
 			</tr>
 			-->
+
+
 
 		</tbody>
 	
