--- a/pub/resource/html/recruit_notification.html
+++ b/pub/resource/html/recruit_notification.html
@@ -120,8 +120,8 @@
 	<div class="wadiz-inner">
 		<div class="recruit-section">
 			<ul class="tab-list">
-				<li class="tab-item active"><a href="#;" class="tab-link"># 채용절차</a></li>
-				<li class="tab-item"><a href="#;" class="tab-link"># 채용공고</a></li>
+				<li class="tab-item"><a href="#;" class="tab-link"># 채용절차</a></li>
+				<li class="tab-item active"><a href="#;" class="tab-link"># 채용공고</a></li>
 			</ul>
 			<div class="search-section">
 				<div class="search-box">
