개인정보취급방침, 이메일무단수집거부, sns 링크 수정

--- a/index.html
+++ b/index.html
@@ -342,9 +342,9 @@
 				<li class="gp-item"><button type="button" data-layer="email-layer" class="gp-link">이메일무단수집거부</button></li>
 			</ul>
 			<ul class="sns-list">
-				<li class="sns-item face"><a href="https://www.facebook.com/wadizcareer/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">페이스북 바로가기</span></a></li>
+				<li class="sns-item face"><a href="https://www.facebook.com/wadiz.funding" class="sns-link sp_wadiz" target="_blank"><span class="a11y">페이스북 바로가기</span></a></li>
 				<li class="sns-item insta"><a href="https://www.instagram.com/wadiz_reward/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">유투브 바로가기</span></a></li>
-				<li class="sns-item ut"><a href="https://www.youtube.com/channel/UC8AexhOPSVzUPM7XkMyYuRA/wadiz_reward/" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
+				<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
 			</ul>
 			<address class="address">
 				<span class="ceo">대표이사 : 최동철</span>사업자 등록 번호 : 220-88-37661 <br>
