--- a/res/pub/front/resource/html/interview_detail.html
+++ b/res/pub/front/resource/html/interview_detail.html
@@ -7,8 +7,8 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/res/pub/front/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/res/pub/front/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
@@ -119,68 +119,85 @@
 	</div>
 	<div class="wadiz-inner">
 		<div class="inside-section">
-			<ul class="inside-list">
-				<li class="inside-item">
-					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+			<div class="detail-area">
+				<p class="detail-title">와디즈의 가치를 알리기 위해 디자인 이상의 것을 고민하는, 와디즈 디자인팀</p>
+				<span class="detail-date">2019.10.25</span>
+				<div class="detail-content">
+					<!-- [D] 에디터 영역으로 임시 스타일링 적용 -->
+					<p><img src="/res/pub/front/resource/images/temp/temp_detail_01.jpg" alt=""></p>
+					<p style="font-size: 16px;font-weight: 500;margin:40px 0;color: #333;">우와~ 진짜 짱이다! 천재야 천재!</p>
+					<p style="color: #333;">
+						각종 환호와 칭찬이 때와 장소를 가리지 않고 난무합니다. 어디서 나는 소리인고 하니 시선은 다름 없이 이 팀이 있는 곳으로 향합니다.
+						여러 부서에서 끊임 없이 들어오는 요청과 마쳤다 싶으면 새롭게 생기는 커다란 디자인 프로젝트들에 지칠 법도 한데 이 팀은 여전히 같이 웃고 서로 북돋아줍니다. <br><br>
+						와디즈 플랫폼의 역할을 재정의한 브랜드 리뉴얼과 불가능할 것 같았던 일정을 소화해내고 수많은 와디즈인의 호평을 받았던 오피스 리뉴얼을 성공적으로
+						마칠 수 있었던 원동력 역시 이 팀워크였습니다. 와디즈가 가고자 하는 길을 누구보다 응원하는 마음으로 모여 와디즈를 더 널리 알리려는 팀, 와디즈 디자인팀을 소개합니다.
+					</p>
+				</div>
+			</div>
+			<div class="align-box tar">
+				<a href="#;" class="btn-type">목록</a>
+			</div>
+
+			<p class="sub-title2">최근 게시물</p>
+
+			<div id="latest-list" class="owl-carousel">
+				<div class="item">
+					<a href="#;" class="owl-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.01</span>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="#;" class="owl-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.02</span>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="#;" class="owl-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.03</span>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="#;" class="owl-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.04</span>
+						</div>
+					</a>
+				</div>
+				<div class="item">
+					<a href="#;" class="owl-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
 							<span class="inside-date">2019.10.05</span>
 						</div>
 					</a>
-				</li>
-				<li class="inside-item">
-					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+				</div>
+				<div class="item">
+					<a href="#;" class="owl-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
 						<div class="inside-box">
 							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.05</span>
+							<span class="inside-date">2019.10.06</span>
 						</div>
 					</a>
-				</li>
-				<li class="inside-item">
-					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.05</span>
-						</div>
-					</a>
-				</li>
-				<li class="inside-item">
-					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.05</span>
-						</div>
-					</a>
-				</li>
-				<li class="inside-item">
-					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.05</span>
-						</div>
-					</a>
-				</li>
-				<li class="inside-item">
-					<a href="#;" class="inside-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.05</span>
-						</div>
-					</a>
-				</li>
-			</ul>
-			<div class="align-box v1">
-				<a href="#;" class="btn-type">더보기</a>
+				</div>
 			</div>
 		</div>
 	</div>
-
 
 </div>
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
@@ -204,14 +221,9 @@
 </footer>
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
-
-<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/pub/resource/js/wadiz.js"></script>
-<script>
-
-
-
-</script>
+<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/res/pub/front/resource/js/libs/owl.carousel.js"></script>
+<script src="/res/pub/front/resource/js/wadiz.js"></script>
 
 </body>
 </html>
