--- a/res/pub/front/resource/html/interview_list.html
+++ b/res/pub/front/resource/html/interview_list.html
@@ -7,8 +7,8 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/res/pub/front/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/res/pub/front/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
@@ -112,96 +112,71 @@
 <!-- E : header -->
 
 <div class="container">
-	<div class="sub-visual-section recruit">
+	<div class="sub-visual-section inside">
 		<div class="wadiz-inner">
-			<h2 class="page-title">채용정보</h2>
+			<h2 class="page-title">와디즈 인터뷰</h2>
 		</div>
 	</div>
 	<div class="wadiz-inner">
-		<div class="recruit-section">
-			<ul class="tab-list">
-				<li class="tab-item active"><a href="#;" class="tab-link"># 채용절차</a></li>
-				<li class="tab-item"><a href="#;" class="tab-link"># 채용공고</a></li>
+		<div class="inside-section">
+			<ul class="inside-list">
+				<li class="inside-item">
+					<a href="#;" class="inside-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.05</span>
+						</div>
+					</a>
+				</li>
+				<li class="inside-item">
+					<a href="#;" class="inside-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.05</span>
+						</div>
+					</a>
+				</li>
+				<li class="inside-item">
+					<a href="#;" class="inside-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.05</span>
+						</div>
+					</a>
+				</li>
+				<li class="inside-item">
+					<a href="#;" class="inside-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.05</span>
+						</div>
+					</a>
+				</li>
+				<li class="inside-item">
+					<a href="#;" class="inside-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.05</span>
+						</div>
+					</a>
+				</li>
+				<li class="inside-item">
+					<a href="#;" class="inside-link">
+						<div class="inside-thumbnail"><img src="/res/pub/front/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
+						<div class="inside-box">
+							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
+							<span class="inside-date">2019.10.05</span>
+						</div>
+					</a>
+				</li>
 			</ul>
-
-			<div class="step-section">
-				<div class="step-inner">
-					<h2 class="point-title">Standard Interview</h2>
-					<ul class="step-list">
-						<li class="step-item">
-							<i class="step-icon sp_wadiz"></i>
-							<span class="num">01</span>
-							<span class="step-txt">지원서 접수</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-2"></i>
-							<span class="num">02</span>
-							<span class="step-txt">서류 전형</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-3"></i>
-							<span class="num">03</span>
-							<span class="step-txt">1차 면접 및 인성 검사</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-4"></i>
-							<span class="num">04</span>
-							<span class="step-txt">2차 면접</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-5"></i>
-							<span class="num">05</span>
-							<span class="step-txt">평판 조회 및 처우 협의</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-6"></i>
-							<span class="num">06</span>
-							<span class="step-txt">최종합격</span>
-						</li>
-					</ul>
-				</div>
-				<div class="step-inner">
-					<h2 class="point-title">1 Day Interview</h2>
-					<ul class="step-list">
-						<li class="step-item">
-							<i class="step-icon sp_wadiz"></i>
-							<span class="num">01</span>
-							<span class="step-txt">지원서 접수</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-2"></i>
-							<span class="num">02</span>
-							<span class="step-txt">서류 전형</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-3"></i>
-							<span class="num">03</span>
-							<span class="step-txt">인성 검사 및 면접</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-5"></i>
-							<span class="num">04</span>
-							<span class="step-txt">평판 조회 및 처우 협의</span>
-						</li>
-						<li class="step-item">
-							<i class="step-icon sp_wadiz icon-6"></i>
-							<span class="num">05</span>
-							<span class="step-txt">최종 합격</span>
-						</li>
-					</ul>
-				</div>
-			</div>
-			
-			<div class="guide-section">
-				<h2 class="point-title">유의사항</h2>
-				<ul class="guide-list">
-					<li class="guide-item">- 이력서 제출 순으로 검토가 진행되며 채용 시 공고가 조기 마감 될 수 있습니다.</li>
-					<li class="guide-item">- 개발자의 경우 '개발테스트'를 진행하며 직군별로 실무능력 간이 테스트가 있습니다.</li>
-					<li class="guide-item">
-						- 경력직은 3개월간 Probation 기간을 거치며 급여는 동일한 수준으로 지급됩니다.
-						<p class="guide-point">* 인성검사는 합격/불합격 여부와 상관없이 면접관의 판단에 따라 온라인으로 진행됩니다.</p>
-					</li>
-				</ul>
+			<div class="align-box v1">
+				<a href="#;" class="btn-type">더보기</a>
 			</div>
 		</div>
 	</div>
@@ -230,8 +205,8 @@
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
 
-<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/pub/resource/js/wadiz.js"></script>
+<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/res/pub/front/resource/js/wadiz.js"></script>
 <script>
 
 
