--- a/res/pub/front/resource/html/recruit_inquiry.html
+++ b/res/pub/front/resource/html/recruit_inquiry.html
@@ -7,8 +7,8 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/res/pub/front/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/res/pub/front/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
@@ -119,148 +119,136 @@
 	</div>
 	<div class="wadiz-inner">
 		<div class="recruit-section">
-			<ul class="tab-list">
-				<li class="tab-item"><a href="#;" class="tab-link"># 채용절차</a></li>
-				<li class="tab-item active"><a href="#;" class="tab-link"># 채용공고</a></li>
-			</ul>
-			<div class="search-section">
-				<div class="search-box">
-					<div class="search">
-						<input type="search" class="ipt-sch" placeholder="검색어를 입력하세요">
-						<button type="submit" class="btn-search sp_wadiz"><span class="a11y">검색하기</span></button>
+			<h3 class="section-title">
+				FAQ를 통해 해결하지 못한<br class="line-v1"> 궁금증이 있으면 문의해주십시오. ​<br>
+				최대한 빠른 답변 드리겠습니다.
+			</h3>
+			<p class="sub-title2 v1">개인정보의 수집 및 이용에 관한 동의</p>
+			<div class="agree-section">
+				<div class="agree-inner">
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+					개인정보의 수집 및 이용 <br>
+				</div>
+			</div>
+			
+			<div class="align-box between">
+				<p class="guide-txt">본인은 [개인정보 수집 및 이용에 관한 동의]를 잘 읽어보았으며 내용에 동의합니다. </p>
+				<div class="radio-inner">
+					<span class="radio">
+						<input type="radio" id="radio01" name="rdo" checked="checked">
+						<span class="fake-radio sp_wadiz"></span>
+						<label for="radio01">동의합니다</label>
+					</span>
+					<span class="radio space">
+						<input type="radio" id="radio02" name="rdo">
+						<span class="fake-radio sp_wadiz"></span>
+						<label for="radio02">동의하지 않습니다</label>
+					</span>
+				</div>
+			</div>
+
+			<div class="tbl-type">
+				<div class="col-group">
+					<div class="col-head">제목</div>
+					<div class="col-data">
+						<input type="text" class="">
 					</div>
 				</div>
-				<div class="search-result">
-					<!-- [검색결과 있을 경우] -->
-					<p class="result-txt"><span class="keyword primary-color">'기획'</span> 검색결과 <span class="primary-color">5</span>건</p>
-					<!-- [검색결과 없을 경우]-->
-					<p class="result-txt" style="display:none">
-						<span class="keyword primary-color">'기획'</span> 검색조건과 일치하는 결과가 없습니다. <br>
-						다른 키워드로 검색해보세요.
-					</p>
+				<div class="row-group">
+					<div class="col-group">
+						<div class="col-head">이름</div>
+						<div class="col-data">
+							<input type="text" class="">
+						</div>
+					</div>
+					<div class="col-group">
+						<div class="col-head">전화번호</div>
+						<div class="col-data">
+							<input type="text" class="" style="width: 30%;">
+							<span class="">-</span>
+							<input type="text" class="" style="width: 30%;">
+							-
+							<input type="text" class="" style="width: 30%;">
+						</div>
+					</div>
+				</div>
+				<div class="row-group">
+					<div class="col-group">
+						<div class="col-head">이메일</div>
+						<div class="col-data">
+							<input type="text" class="">
+						</div>
+					</div>
+					<div class="col-group">
+						<div class="col-head">내/외국인</div>
+						<div class="col-data">
+							<select name="" id="" class="select v1" style="width: 50%;">
+								<option value="">내국인</option>
+								<option value="">외국인</option>
+							</select>
+						</div>
+					</div>
 				</div>
 			</div>
 
-			<!-- [D] 검색결과가 나타탈 경우 숨김 처리 -->
-			<div class="desktop-select" style="display:none">
-				<a href="#;" class="fake-menu active">#전체</a>
-				<a href="#;" class="fake-menu">#기술</a>
-				<a href="#;" class="fake-menu">#프로덕트</a>
-				<a href="#;" class="fake-menu">#사업</a>
-				<a href="#;" class="fake-menu">#스텝</a>
-				<a href="#;" class="fake-menu">#마케팅/홍보</a>
-				<a href="#;" class="fake-menu">#브랜딩/디자인</a>
-				<a href="#;" class="fake-menu">#인재풀</a>
-			</div>
-			<!-- [D] 검색결과가 나타탈 경우 숨김 처리 -->
-			<div class="select-box full" style="display:none">
-				<select class="select full" name="" id="">
-					<option value="">전체보기</option>
-					<option value="">기술</option>
-					<option value="">프로덕트</option>
-					<option value="">사업</option>
-					<option value="">마케팅/홍보</option>
-					<option value="">브랜딩/디자인</option>
-					<option value="">인재풀</option>
-				</select>
+			<div class="editor-section">
+				에디터 영역
 			</div>
 
-			<div class="bbs-type">
-				<ul class="bbs-list">
-					<li class="bbs-item">
-						<div class="bbs-col col-lg">
-							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
-							<a href="#;" class="bbs-link">
-								<span class="col-sub-title">[브랜딩/디자인]</span>
-								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
-							</a>
+			<div class="col-group security">
+				<div class="col-head">보안문자</div>
+				<div class="col-data">
+					<div class="security-group">
+						<div class="security-col-01">
+							<img src="/res/pub/front/resource/images/temp/temp_security.jpg" alt="">
 						</div>
-						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
+						<div class="security-col-02">
+							<p class="security-txt">
+								그림문자를 정확하게 입력해주세요. 소문자도 사용 가능합니다. <br>
+								스팸성 게시글/메일을 이용할 목적인 경우 이용제한 조치 및 법적인 처벌을 받을 수 있습니다
+							</p>
 						</div>
-						<div class="bbs-col col-s last">
-							<span class="col-span date">2020.03.16~2020.04.05</span>
+					</div>
+					<div class="security-group">
+						<div class="security-col-01"><input type="text" id=""></div>
+						<div class="security-col-02">
+							<button type="button" class="btn-type2">다른그림보기</button>
+							<button type="button" class="btn-type2"><span class="icon-speaker sp_wadiz"></span>소리 듣기</button>
 						</div>
-					</li>
-					<li class="bbs-item">
-						<div class="bbs-col col-lg">
-							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
-							<a href="#;" class="bbs-link">
-								<span class="col-sub-title">[브랜딩/디자인]</span>
-								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
-							</a>
-						</div>
-						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
-						</div>
-						<div class="bbs-col col-s last">
-							<span class="col-span date">2020.03.16~2020.04.05</span>
-						</div>
-					</li>
-					<li class="bbs-item">
-						<div class="bbs-col col-lg">
-							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
-							<a href="#;" class="bbs-link">
-								<span class="col-sub-title">[브랜딩/디자인]</span>
-								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
-							</a>
-						</div>
-						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
-						</div>
-						<div class="bbs-col col-s last">
-							<span class="col-span date">2020.03.16~2020.04.05</span>
-						</div>
-					</li>
-					<li class="bbs-item">
-						<div class="bbs-col col-lg">
-							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
-							<a href="#;" class="bbs-link">
-								<span class="col-sub-title">[브랜딩/디자인]</span>
-								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
-							</a>
-						</div>
-						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
-						</div>
-						<div class="bbs-col col-s last">
-							<span class="col-span date">2020.03.16~2020.04.05</span>
-						</div>
-					</li>
-					<li class="bbs-item">
-						<div class="bbs-col col-lg">
-							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
-							<a href="#;" class="bbs-link">
-								<span class="col-sub-title">[브랜딩/디자인]</span>
-								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
-							</a>
-						</div>
-						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
-						</div>
-						<div class="bbs-col col-s last">
-							<span class="col-span date">2020.03.16~2020.04.05</span>
-						</div>
-					</li>
-				</ul>
+					</div>
+				</div>
 			</div>
 
-			<div class="paging">
-				<a href="#;" class="prev sp_wadiz" title="이전 페이지"><span class="a11y">이전 페이지</span></a>
-				<a href="#;" class="page-number current">1</a>
-				<a href="#;" class="page-number">2</a>
-				<a href="#;" class="page-number">3</a>
-				<a href="#;" class="page-number">4</a>
-				<a href="#;" class="page-number">5</a>
-				<a href="#;" class="next sp_wadiz" title="다음 페이지"><span class="a11y">다음 페이지</span></a>
+			<div class="align-box">
+				<button type="button" class="btn-type">내용지우기</button>
+				<button type="button" class="btn-type">등록</button>
 			</div>
-			<div class="mob-paging">
-				<a href="#;" class="prev sp_wadiz"><span class="a11y">이전 페이지</span></a>
-				<a href="#;" class="page-number current">01</a>
-				<span class="separator">/</span>
-				<a href="#;" class="page-number">04</a>
-				<a href="#;" class="next sp_wadiz"><span class="a11y">다음 페이지</span></a>
-			</div>
+
 		</div>
 	</div>
 
@@ -288,8 +276,8 @@
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
 
-<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/pub/resource/js/wadiz.js"></script>
+<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/res/pub/front/resource/js/wadiz.js"></script>
 <script>
 
 
