--- a/res/pub/front/resource/html/recruit_notification.html
+++ b/res/pub/front/resource/html/recruit_notification.html
@@ -7,8 +7,8 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/res/pub/front/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/res/pub/front/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
@@ -112,92 +112,158 @@
 <!-- E : header -->
 
 <div class="container">
-	<div class="sub-visual-section inside">
+	<div class="sub-visual-section recruit">
 		<div class="wadiz-inner">
-			<h2 class="page-title">와디즈 인터뷰</h2>
+			<h2 class="page-title">채용정보</h2>
 		</div>
 	</div>
 	<div class="wadiz-inner">
-		<div class="inside-section">
-			<div class="detail-area">
-				<p class="detail-title">와디즈의 가치를 알리기 위해 디자인 이상의 것을 고민하는, 와디즈 디자인팀</p>
-				<span class="detail-date">2019.10.25</span>
-				<div class="detail-content">
-					<!-- [D] 에디터 영역으로 임시 스타일링 적용 -->
-					<p><img src="/pub/resource/images/temp/temp_detail_01.jpg" alt=""></p>
-					<p style="font-size: 16px;font-weight: 500;margin:40px 0;color: #333;">우와~ 진짜 짱이다! 천재야 천재!</p>
-					<p style="color: #333;">
-						각종 환호와 칭찬이 때와 장소를 가리지 않고 난무합니다. 어디서 나는 소리인고 하니 시선은 다름 없이 이 팀이 있는 곳으로 향합니다.
-						여러 부서에서 끊임 없이 들어오는 요청과 마쳤다 싶으면 새롭게 생기는 커다란 디자인 프로젝트들에 지칠 법도 한데 이 팀은 여전히 같이 웃고 서로 북돋아줍니다. <br><br>
-						와디즈 플랫폼의 역할을 재정의한 브랜드 리뉴얼과 불가능할 것 같았던 일정을 소화해내고 수많은 와디즈인의 호평을 받았던 오피스 리뉴얼을 성공적으로
-						마칠 수 있었던 원동력 역시 이 팀워크였습니다. 와디즈가 가고자 하는 길을 누구보다 응원하는 마음으로 모여 와디즈를 더 널리 알리려는 팀, 와디즈 디자인팀을 소개합니다.
+		<div class="recruit-section">
+			<ul class="tab-list">
+				<li class="tab-item"><a href="#;" class="tab-link"># 채용절차</a></li>
+				<li class="tab-item active"><a href="#;" class="tab-link"># 채용공고</a></li>
+			</ul>
+			<div class="search-section">
+				<div class="search-box">
+					<div class="search">
+						<input type="search" class="ipt-sch" placeholder="검색어를 입력하세요">
+						<button type="submit" class="btn-search sp_wadiz"><span class="a11y">검색하기</span></button>
+					</div>
+				</div>
+				<div class="search-result">
+					<!-- [검색결과 있을 경우] -->
+					<p class="result-txt"><span class="keyword primary-color">'기획'</span> 검색결과 <span class="primary-color">5</span>건</p>
+					<!-- [검색결과 없을 경우]-->
+					<p class="result-txt" style="display:none">
+						<span class="keyword primary-color">'기획'</span> 검색조건과 일치하는 결과가 없습니다. <br>
+						다른 키워드로 검색해보세요.
 					</p>
 				</div>
 			</div>
-			<div class="align-box tar">
-				<a href="#;" class="btn-type">목록</a>
+
+			<!-- [D] 검색결과가 나타탈 경우 숨김 처리 -->
+			<div class="desktop-select" style="display:none">
+				<a href="#;" class="fake-menu active">#전체</a>
+				<a href="#;" class="fake-menu">#기술</a>
+				<a href="#;" class="fake-menu">#프로덕트</a>
+				<a href="#;" class="fake-menu">#사업</a>
+				<a href="#;" class="fake-menu">#스텝</a>
+				<a href="#;" class="fake-menu">#마케팅/홍보</a>
+				<a href="#;" class="fake-menu">#브랜딩/디자인</a>
+				<a href="#;" class="fake-menu">#인재풀</a>
+			</div>
+			<!-- [D] 검색결과가 나타탈 경우 숨김 처리 -->
+			<div class="select-box full" style="display:none">
+				<select class="select full" name="" id="">
+					<option value="">전체보기</option>
+					<option value="">기술</option>
+					<option value="">프로덕트</option>
+					<option value="">사업</option>
+					<option value="">마케팅/홍보</option>
+					<option value="">브랜딩/디자인</option>
+					<option value="">인재풀</option>
+				</select>
 			</div>
 
-			<p class="sub-title2">최근 게시물</p>
+			<div class="bbs-type">
+				<ul class="bbs-list">
+					<li class="bbs-item">
+						<div class="bbs-col col-lg">
+							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
+							<a href="#;" class="bbs-link">
+								<span class="col-sub-title">[브랜딩/디자인]</span>
+								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
+							</a>
+						</div>
+						<div class="bbs-col col-s">
+							<span class="col-flag">신입</span>
+						</div>
+						<div class="bbs-col col-s last">
+							<span class="col-span date">2020.03.16~2020.04.05</span>
+						</div>
+					</li>
+					<li class="bbs-item">
+						<div class="bbs-col col-lg">
+							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
+							<a href="#;" class="bbs-link">
+								<span class="col-sub-title">[브랜딩/디자인]</span>
+								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
+							</a>
+						</div>
+						<div class="bbs-col col-s">
+							<span class="col-flag">신입</span>
+						</div>
+						<div class="bbs-col col-s last">
+							<span class="col-span date">2020.03.16~2020.04.05</span>
+						</div>
+					</li>
+					<li class="bbs-item">
+						<div class="bbs-col col-lg">
+							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
+							<a href="#;" class="bbs-link">
+								<span class="col-sub-title">[브랜딩/디자인]</span>
+								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
+							</a>
+						</div>
+						<div class="bbs-col col-s">
+							<span class="col-flag">신입</span>
+						</div>
+						<div class="bbs-col col-s last">
+							<span class="col-span date">2020.03.16~2020.04.05</span>
+						</div>
+					</li>
+					<li class="bbs-item">
+						<div class="bbs-col col-lg">
+							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
+							<a href="#;" class="bbs-link">
+								<span class="col-sub-title">[브랜딩/디자인]</span>
+								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
+							</a>
+						</div>
+						<div class="bbs-col col-s">
+							<span class="col-flag">신입</span>
+						</div>
+						<div class="bbs-col col-s last">
+							<span class="col-span date">2020.03.16~2020.04.05</span>
+						</div>
+					</li>
+					<li class="bbs-item">
+						<div class="bbs-col col-lg">
+							<div class="mob-sub-title"><em class="m-flag">[신입]</em> 홍보/마케팅/브랜딩</div>
+							<a href="#;" class="bbs-link">
+								<span class="col-sub-title">[브랜딩/디자인]</span>
+								<span class="col-title">영상 콘텐츠 PD(공고제목)</span>
+							</a>
+						</div>
+						<div class="bbs-col col-s">
+							<span class="col-flag">신입</span>
+						</div>
+						<div class="bbs-col col-s last">
+							<span class="col-span date">2020.03.16~2020.04.05</span>
+						</div>
+					</li>
+				</ul>
+			</div>
 
-			<div id="latest-list" class="owl-carousel">
-				<div class="item">
-					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.01</span>
-						</div>
-					</a>
-				</div>
-				<div class="item">
-					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.02</span>
-						</div>
-					</a>
-				</div>
-				<div class="item">
-					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.03</span>
-						</div>
-					</a>
-				</div>
-				<div class="item">
-					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.04</span>
-						</div>
-					</a>
-				</div>
-				<div class="item">
-					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.05</span>
-						</div>
-					</a>
-				</div>
-				<div class="item">
-					<a href="#;" class="owl-link">
-						<div class="inside-thumbnail"><img src="/pub/resource/images/temp/temp_thumb_01.jpg" alt=""></div>
-						<div class="inside-box">
-							<p class="inside-txt">지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, 지지와 존중으로 와디즈 서비스의 청사진을 그리는 사람들, .</p>
-							<span class="inside-date">2019.10.06</span>
-						</div>
-					</a>
-				</div>
+			<div class="paging">
+				<a href="#;" class="prev sp_wadiz" title="이전 페이지"><span class="a11y">이전 페이지</span></a>
+				<a href="#;" class="page-number current">1</a>
+				<a href="#;" class="page-number">2</a>
+				<a href="#;" class="page-number">3</a>
+				<a href="#;" class="page-number">4</a>
+				<a href="#;" class="page-number">5</a>
+				<a href="#;" class="next sp_wadiz" title="다음 페이지"><span class="a11y">다음 페이지</span></a>
+			</div>
+			<div class="mob-paging">
+				<a href="#;" class="prev sp_wadiz"><span class="a11y">이전 페이지</span></a>
+				<a href="#;" class="page-number current">01</a>
+				<span class="separator">/</span>
+				<a href="#;" class="page-number">04</a>
+				<a href="#;" class="next sp_wadiz"><span class="a11y">다음 페이지</span></a>
 			</div>
 		</div>
 	</div>
+
 
 </div>
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
@@ -221,9 +287,14 @@
 </footer>
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
-<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/pub/resource/js/libs/owl.carousel.js"></script>
-<script src="/pub/resource/js/wadiz.js"></script>
+
+<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/res/pub/front/resource/js/wadiz.js"></script>
+<script>
+
+
+
+</script>
 
 </body>
 </html>
