--- a/res/pub/front/resource/html/recruit_step.html
+++ b/res/pub/front/resource/html/recruit_step.html
@@ -7,8 +7,8 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/res/pub/front/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/res/pub/front/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
@@ -119,136 +119,90 @@
 	</div>
 	<div class="wadiz-inner">
 		<div class="recruit-section">
-			<h3 class="section-title">
-				FAQ를 통해 해결하지 못한<br class="line-v1"> 궁금증이 있으면 문의해주십시오. ​<br>
-				최대한 빠른 답변 드리겠습니다.
-			</h3>
-			<p class="sub-title2 v1">개인정보의 수집 및 이용에 관한 동의</p>
-			<div class="agree-section">
-				<div class="agree-inner">
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
-					개인정보의 수집 및 이용 <br>
+			<ul class="tab-list">
+				<li class="tab-item active"><a href="#;" class="tab-link"># 채용절차</a></li>
+				<li class="tab-item"><a href="#;" class="tab-link"># 채용공고</a></li>
+			</ul>
+
+			<div class="step-section">
+				<div class="step-inner">
+					<h2 class="point-title">Standard Interview</h2>
+					<ul class="step-list">
+						<li class="step-item">
+							<i class="step-icon sp_wadiz"></i>
+							<span class="num">01</span>
+							<span class="step-txt">지원서 접수</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-2"></i>
+							<span class="num">02</span>
+							<span class="step-txt">서류 전형</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-3"></i>
+							<span class="num">03</span>
+							<span class="step-txt">1차 면접 및 인성 검사</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-4"></i>
+							<span class="num">04</span>
+							<span class="step-txt">2차 면접</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-5"></i>
+							<span class="num">05</span>
+							<span class="step-txt">평판 조회 및 처우 협의</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-6"></i>
+							<span class="num">06</span>
+							<span class="step-txt">최종합격</span>
+						</li>
+					</ul>
+				</div>
+				<div class="step-inner">
+					<h2 class="point-title">1 Day Interview</h2>
+					<ul class="step-list">
+						<li class="step-item">
+							<i class="step-icon sp_wadiz"></i>
+							<span class="num">01</span>
+							<span class="step-txt">지원서 접수</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-2"></i>
+							<span class="num">02</span>
+							<span class="step-txt">서류 전형</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-3"></i>
+							<span class="num">03</span>
+							<span class="step-txt">인성 검사 및 면접</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-5"></i>
+							<span class="num">04</span>
+							<span class="step-txt">평판 조회 및 처우 협의</span>
+						</li>
+						<li class="step-item">
+							<i class="step-icon sp_wadiz icon-6"></i>
+							<span class="num">05</span>
+							<span class="step-txt">최종 합격</span>
+						</li>
+					</ul>
 				</div>
 			</div>
 			
-			<div class="align-box between">
-				<p class="guide-txt">본인은 [개인정보 수집 및 이용에 관한 동의]를 잘 읽어보았으며 내용에 동의합니다. </p>
-				<div class="radio-inner">
-					<span class="radio">
-						<input type="radio" id="radio01" name="rdo" checked="checked">
-						<span class="fake-radio sp_wadiz"></span>
-						<label for="radio01">동의합니다</label>
-					</span>
-					<span class="radio space">
-						<input type="radio" id="radio02" name="rdo">
-						<span class="fake-radio sp_wadiz"></span>
-						<label for="radio02">동의하지 않습니다</label>
-					</span>
-				</div>
+			<div class="guide-section">
+				<h2 class="point-title">유의사항</h2>
+				<ul class="guide-list">
+					<li class="guide-item">- 이력서 제출 순으로 검토가 진행되며 채용 시 공고가 조기 마감 될 수 있습니다.</li>
+					<li class="guide-item">- 개발자의 경우 '개발테스트'를 진행하며 직군별로 실무능력 간이 테스트가 있습니다.</li>
+					<li class="guide-item">
+						- 경력직은 3개월간 Probation 기간을 거치며 급여는 동일한 수준으로 지급됩니다.
+						<p class="guide-point">* 인성검사는 합격/불합격 여부와 상관없이 면접관의 판단에 따라 온라인으로 진행됩니다.</p>
+					</li>
+				</ul>
 			</div>
-
-			<div class="tbl-type">
-				<div class="col-group">
-					<div class="col-head">제목</div>
-					<div class="col-data">
-						<input type="text" class="">
-					</div>
-				</div>
-				<div class="row-group">
-					<div class="col-group">
-						<div class="col-head">이름</div>
-						<div class="col-data">
-							<input type="text" class="">
-						</div>
-					</div>
-					<div class="col-group">
-						<div class="col-head">전화번호</div>
-						<div class="col-data">
-							<input type="text" class="" style="width: 30%;">
-							<span class="">-</span>
-							<input type="text" class="" style="width: 30%;">
-							-
-							<input type="text" class="" style="width: 30%;">
-						</div>
-					</div>
-				</div>
-				<div class="row-group">
-					<div class="col-group">
-						<div class="col-head">이메일</div>
-						<div class="col-data">
-							<input type="text" class="">
-						</div>
-					</div>
-					<div class="col-group">
-						<div class="col-head">내/외국인</div>
-						<div class="col-data">
-							<select name="" id="" class="select v1" style="width: 50%;">
-								<option value="">내국인</option>
-								<option value="">외국인</option>
-							</select>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="editor-section">
-				에디터 영역
-			</div>
-
-			<div class="col-group security">
-				<div class="col-head">보안문자</div>
-				<div class="col-data">
-					<div class="security-group">
-						<div class="security-col-01">
-							<img src="/pub/resource/images/temp/temp_security.jpg" alt="">
-						</div>
-						<div class="security-col-02">
-							<p class="security-txt">
-								그림문자를 정확하게 입력해주세요. 소문자도 사용 가능합니다. <br>
-								스팸성 게시글/메일을 이용할 목적인 경우 이용제한 조치 및 법적인 처벌을 받을 수 있습니다
-							</p>
-						</div>
-					</div>
-					<div class="security-group">
-						<div class="security-col-01"><input type="text" id=""></div>
-						<div class="security-col-02">
-							<button type="button" class="btn-type2">다른그림보기</button>
-							<button type="button" class="btn-type2"><span class="icon-speaker sp_wadiz"></span>소리 듣기</button>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="align-box">
-				<button type="button" class="btn-type">내용지우기</button>
-				<button type="button" class="btn-type">등록</button>
-			</div>
-
 		</div>
 	</div>
 
@@ -276,8 +230,8 @@
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
 
-<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/pub/resource/js/wadiz.js"></script>
+<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/res/pub/front/resource/js/wadiz.js"></script>
 <script>
 
 
