--- a/res/pub/front/resource/html/spinor.html
+++ b/res/pub/front/resource/html/spinor.html
@@ -7,8 +7,8 @@
 	<title>Wadiz 채용사이트</title>
 	<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,500,600,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,300,400,500,700&display=swap&subset=korean" rel="stylesheet">
-	<link rel="stylesheet" href="/pub/resource/css/wadiz.css">
-	<link rel="stylesheet" media="(max-width: 768px)" href="/pub/resource/css/wadiz.mob.css" />
+	<link rel="stylesheet" href="/res/pub/front/resource/css/wadiz.css">
+	<link rel="stylesheet" media="(max-width: 768px)" href="/res/pub/front/resource/css/wadiz.mob.css" />
 </head>
 <body>
 <!-- S : header -->
@@ -396,8 +396,8 @@
 </div>
 <!-- E : spinor -->
 
-<script src="/pub/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/pub/resource/js/wadiz.js"></script>
+<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="/res/pub/front/resource/js/wadiz.js"></script>
 
 
 </body>
