비디오 영상 추가

--- a/res/pub/front/index.html
+++ b/res/pub/front/index.html
@@ -125,6 +125,11 @@
 	</ul>
 </div>
 <!-- E : fullpage visual menu -->
+<div class="video-section">
+	<video autoplay loop class="video">
+		<source src="/res/pub/front/resource/images/wadiz_video.mp4" type="video/mp4">
+	</video>
+</div>
 <div class="icon-scroll sp_wadiz"><span class="a11y">마우스로 스크롤하기</span></div>
 <div class="next-view off sp_wadiz-a">진행 중인 채용 공고</div>
 
