채용 상세 추가

--- a/res/pub/front/codinglist.html
+++ b/res/pub/front/codinglist.html
@@ -151,6 +151,14 @@
 				<td><span class="state"><span class="complete"></span></span></td>
 			</tr>
 			<tr>
+				<td>wadiz > 지원하기 > 채용공고 > 상세</td>
+				<td><a href="/res/pub/front/resource/html/recruit_detail.html">recruit_detail.html</a></td>
+				<td></td>
+				<td>2020-04-16</td>
+				<td></td>
+				<td><span class="state"><span class="complete"></span></span></td>
+			</tr>
+			<tr>
 				<td>wadiz > 지원하기 > 문의하기</td>
 				<td><a href="/res/pub/front/resource/html/recruit_inquiry.html">recruit_inquiry.html</a></td>
 				<td></td>
