리스트 업데이트

--- a/res/pub/front/codinglist.html
+++ b/res/pub/front/codinglist.html
@@ -180,6 +180,14 @@
 				<td></td>
 				<td><span class="state"><span class="complete"></span></span></td>
 			</tr>
+			<tr>
+				<td>이메일</td>
+				<td><a href="/res/pub/front/resource/html/email/email_sample.html">email_sample.html</a></td>
+				<td></td>
+				<td>2020-04-16</td>
+				<td></td>
+				<td><span class="state"><span class="complete"></span></span></td>
+			</tr>
 
 
 
