--- a/res/pub/front/codinglist.html
+++ b/res/pub/front/codinglist.html
@@ -188,6 +188,14 @@
 				<td></td>
 				<td><span class="state"><span class="complete"></span></span></td>
 			</tr>
+			<tr>
+				<td>error</td>
+				<td><a href="/res/pub/front/resource/html/error.html">error.html</a></td>
+				<td></td>
+				<td>2020-04-17</td>
+				<td></td>
+				<td><span class="state"><span class="complete"></span></span></td>
+			</tr>
 
 
 
