--- a/res/pub/front/index.html
+++ b/res/pub/front/index.html
@@ -362,9 +362,9 @@
 <button type="button" class="btn-move-top"><span class="a11y">상단으로 이동하기</span></button>
 
 
-<script src="/res/pub/front/resource/js/libs/jquery-1.12.4.min.js"></script>
-<script src="/res/pub/front/resource/js/libs/fullpage.min.js"></script>
-<script src="/res/pub/front/resource/js/wadiz.js"></script>
+<script src="./resource/js/libs/jquery-1.12.4.min.js"></script>
+<script src="./resource/js/libs/fullpage.min.js"></script>
+<script src="./resource/js/wadiz.js"></script>
 
 </body>
 </html>
