20200421 수정사항 처리

--- a/res/pub/front/resource/html/recruit_notification.html
+++ b/res/pub/front/resource/html/recruit_notification.html
@@ -176,7 +176,7 @@
 							</a>
 						</div>
 						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
+							<a href="#;" class="col-flag">신입</a>
 						</div>
 						<div class="bbs-col col-s last">
 							<span class="col-span date">2020.03.16~2020.04.05</span>
@@ -191,7 +191,7 @@
 							</a>
 						</div>
 						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
+							<a href="#;" class="col-flag">신입</a>
 						</div>
 						<div class="bbs-col col-s last">
 							<span class="col-span date">2020.03.16~2020.04.05</span>
@@ -206,7 +206,7 @@
 							</a>
 						</div>
 						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
+							<a href="#;" class="col-flag">신입</a>
 						</div>
 						<div class="bbs-col col-s last">
 							<span class="col-span date">2020.03.16~2020.04.05</span>
@@ -221,7 +221,7 @@
 							</a>
 						</div>
 						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
+							<a href="#;" class="col-flag">신입</a>
 						</div>
 						<div class="bbs-col col-s last">
 							<span class="col-span date">2020.03.16~2020.04.05</span>
@@ -236,7 +236,7 @@
 							</a>
 						</div>
 						<div class="bbs-col col-s">
-							<span class="col-flag">신입</span>
+							<a href="#;" class="col-flag">신입</a>
 						</div>
 						<div class="bbs-col col-s last">
 							<span class="col-span date">2020.03.16~2020.04.05</span>
