20200421 수정사항 처리

--- a/res/pub/front/resource/html/recruit_step.html
+++ b/res/pub/front/resource/html/recruit_step.html
@@ -130,33 +130,45 @@
 					<ul class="step-list">
 						<li class="step-item">
 							<i class="step-icon sp_wadiz"></i>
-							<span class="num">01</span>
-							<span class="step-txt">지원서 접수</span>
+							<div class="step-txt-box">
+								<span class="num">01</span>
+								<span class="step-txt">지원서 접수</span>
+							</div>
 						</li>
 						<li class="step-item">
 							<i class="step-icon sp_wadiz icon-2"></i>
-							<span class="num">02</span>
-							<span class="step-txt">서류 전형</span>
+							<div class="step-txt-box">
+								<span class="num">02</span>
+								<span class="step-txt">서류 전형</span>
+							</div>
 						</li>
 						<li class="step-item">
 							<i class="step-icon sp_wadiz icon-3"></i>
-							<span class="num">03</span>
-							<span class="step-txt">1차 면접 및 인성 검사</span>
+							<div class="step-txt-box">
+								<span class="num">03</span>
+								<span class="step-txt">1차 면접 및 인성 검사</span>
+							</div>
 						</li>
 						<li class="step-item">
 							<i class="step-icon sp_wadiz icon-4"></i>
-							<span class="num">04</span>
-							<span class="step-txt">2차 면접</span>
+							<div class="step-txt-box">
+								<span class="num">04</span>
+								<span class="step-txt">2차 면접</span>
+							</div>
 						</li>
 						<li class="step-item">
 							<i class="step-icon sp_wadiz icon-5"></i>
-							<span class="num">05</span>
-							<span class="step-txt">평판 조회 및 처우 협의</span>
+							<div class="step-txt-box">
+								<span class="num">05</span>
+								<span class="step-txt">평판 조회 및 처우 협의</span>
+							</div>
 						</li>
 						<li class="step-item">
 							<i class="step-icon sp_wadiz icon-6"></i>
-							<span class="num">06</span>
-							<span class="step-txt">최종합격</span>
+							<div class="step-txt-box">
+								<span class="num">06</span>
+								<span class="step-txt">최종합격</span>
+							</div>
 						</li>
 					</ul>
 				</div>
