2020-04-27 footer logo add

--- a/res/pub/front/resource/html/interview_list.html
+++ b/res/pub/front/resource/html/interview_list.html
@@ -197,8 +197,11 @@
 		<li class="sns-item ut"><a href="https://www.youtube.com/channel/UCRF2YAxV9vnzo2khhGCGlZg/featured" class="sns-link sp_wadiz" target="_blank"><span class="a11y">인스타그램 바로가기</span></a></li>
 	</ul>
 	<address class="address">
-		<span class="ceo">대표이사 : 최동철</span>사업자 등록 번호 : 220-88-37661 <br>
-		주소 : 경기도 성남시 분당구 판교로 242 (삼평동) 판교디지털센터 A동 4층 402호
+		<p class="txt-address"><span class="ceo">대표이사 : 최동철</span>사업자 등록 번호 : 220-88-37661 <br>주소 : 경기도 성남시 분당구 판교로 242 (삼평동) 판교디지털센터 A동 4층 402호</p>
+		<div class="footer-logos">
+			<span class="logos-item"><img src="./resource/images/footer_logo-a.jpg" alt=""></span>
+			<span class="logos-item"><img src="./resource/images/footer_logo-b.jpg" alt=""></span>
+		</div>
 	</address>
 	<p class="copyright">© wadiz platform ALL RIGHTS RESERVED.</p>
 </footer>
