수정 요청사항 반영

--- a/res/pub/front/resource/html/about.html
+++ b/res/pub/front/resource/html/about.html
@@ -220,58 +220,93 @@
 			흘러 성장하는 세상을 만들어 가고 있습니다.
 		</div>
 		<ul class="history-list">
+
+			<li class="history-item">
+				<em class="year">2020</em>
+				<ul class="sub-history">
+					<li><span class="month">02월</span> 회원 200만 명 돌파</li>
+					<li><span class="month">03월</span> 월간 방문자 수(sessions) 1,000만 명 돌파</li>
+					<li><span class="month">04월</span> 대한민국 모바일 대상 크라우드펀딩 부문 최우수상 수상</li>
+					<li><span class="month">04월</span> 누적 중개금액 3,000억 돌파</li>
+					<li><span class="month">04월</span> 영국 파이낸셜타임즈 Hihg-Growth Companies Asia-Pacific 2020 총 500기업 중 31위 선정</li>
+				</ul>
+			</li>
+
 			<li class="history-item">
 				<em class="year">2019</em>
 				<ul class="sub-history">
-					<li><span class="month">01월</span> 월 거래액 100억 돌파</li>
+					<li><span class="month">01월</span> 월 중계금액 100억 돌파</li>
 					<li><span class="month">02월</span> 회원 100만 명 돌파</li>
-					<li><span class="month">03월</span> 2019 대한민국 마케팅 대상 개인부분 수상</li>
+					<li><span class="month">06월</span> 대한민국 창업대상 국무총리 단체표창 수상</li>
+
+					<li><span class="month">08월</span> 누적 프로젝트 오픈건수 1만건 돌파</li>
+					<li><span class="month">10월</span> 2019 레드헤링 아시아 100대 기업 선정</li>
+					<li><span class="month">10월</span> 누적 중개금액 2,000억 돌파</li>
+					<li><span class="month">12월</span> 경기도 일자리 우수기업 선정</li>
 				</ul>
 			</li>
 			<li class="history-item">
 				<em class="year">2018</em>
 				<ul class="sub-history">
-					<li><span class="month">07월</span> 일본 마쿠아케와 MOU 체결</li>
-					<li><span class="month">08월</span> 싱가포르 Fundedhere과 MOU 체결</li>
-					<li><span class="month">12월</span> 누적 펀딩금액 1,000억 돌파</li>
+					<li><span class="month">02월</span> 신한은행 MOU 체결</li>
+					<li><span class="month">07월</span> 일본 마쿠아케와 MOU체결</li>
+					<li><span class="month">08월</span> 싱가포르 펀디드히어와 MOU체결</li>
+					<li><span class="month">10월</span> 스타트업 비즈니스 매거진 wadiz next 1호 발간</li>
+					<li><span class="month">12월</span> 누적 중개금액 1,000억 돌파</li>
 				</ul>
 			</li>
+
 			<li class="history-item">
 				<em class="year">2017</em>
 				<ul class="sub-history">
+					<li><span class="month">01월</span> 증권형 크라우드펀딩 1주년 기념 유공 금융위원장 표창 수상</li>
 					<li><span class="month">02월</span> 프리미엄 회원 서비스 W9 론칭</li>
-					<li><span class="month">09월</span> 포춘코리아 2017 대한민국 리더 대상 수상</li>
+					<li><span class="month">07월</span> 국내 최초 리워드형 펀딩 프로젝트 15억 달성(샤플 캐리어&amp;백팩)</li>
+					<li><span class="month">09월</span> 포춘코리아 2017 대한민국 리더 수상</li>
 				</ul>
 			</li>
+
 			<li class="history-item">
 				<em class="year">2016</em>
 				<ul class="sub-history">
-					<li><span class="month">02월</span> 국내1호 증권형 크라우드펀딩 라이센스 취득</li>
-					<li><span class="month">09월</span> 금융의날 금융개혁 유공 국무총리 표창 수상</li>
+					<li><span class="month">01월</span> 국내 1호 증권형 크라우드펀딩 라이선스 취득</li>
+					<li><span class="month">10월</span> 금융의 날 금융개혁유공 국무총리 표창 수상</li>
+					<li><span class="month">12월</span> 국내 최초 수입 영화 투자 성공 사례 배출(너의 이름은)</li>
+					<li><span class="month">12월</span> 1년간 누적 증권형 크라우드펀딩시장 점유율 1위 달성</li>
 				</ul>
 			</li>
+
 			<li class="history-item">
 				<em class="year">2015</em>
 				<ul class="sub-history">
-					<li><span class="month">10월</span> 2015년 대한민국 경제리더 대상 수상</li>
+					<li><span class="month">09월</span> NH투자증권 MOU체결</li>
+					<li><span class="month">10월</span> 2015 대한민국 경제리더 대상 수상</li>
+					<li><span class="month">11월</span> 리워드형 펀딩 단일 프로젝트 1억 모집 사례 배출</li>
+					<li><span class="month">12월</span> 대한민국 창조경제대상 미래창조과학부장관상 수상</li>
 				</ul>
 			</li>
+
 			<li class="history-item">
 				<em class="year">2014</em>
 				<ul class="sub-history">
-					<li><span class="month">01월</span> 리워드형 크라우드펀딩 서비스 오픈</li>
+					<li><span class="month">01월</span> 리워드형 크라우드펀딩 정식 서비스 오픈</li>
+					<li><span class="month">04월</span> 국내 최초 크라우드펀딩 서적 출간 '세상을 바꾸는 작은 돈의 힘, 크라우드펀딩'</li>
+					<li><span class="month">07월</span> 누적프로젝트 오픈건수 100건 돌파</li>
+					<li><span class="month">10월</span> 청년가기업가정신상 중소기업청장 표창</li>
 				</ul>
 			</li>
+
 			<li class="history-item">
 				<em class="year">2013</em>
 				<ul class="sub-history">
-					<li><span class="month">06월</span> 크라우드펀딩 스쿨 시작</li>
+					<li><span class="month">06월</span> 리워드형 크라우드펀딩 베타서비스 오픈</li>
+					<li><span class="month">06월</span> 와디즈 스쿨 시작</li>
 				</ul>
 			</li>
 			<li class="history-item">
 				<em class="year">2012</em>
 				<ul class="sub-history">
-					<li><span class="month">05월</span> 와디즈㈜ 법인설립</li>
+					<li><span class="month">05월</span> 와디즈(주) 법인 설립</li>
 					<li><span class="month">09월</span> 와디즈 크라우드산업연구소 설립</li>
 				</ul>
 			</li>
